--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,23 +2,32 @@
 // Components
 // - Layout
 import Layout from '../layouts/LayoutDesign.astro'
-// - Blocks
-import HomeVideoCTA from '../components/blocks/hero/HomeVideoCTA.astro'
-import TitleText from '../components/blocks/titleText/TitleText.astro'
-import Experience from '../components/blocks/feed/Experience.astro'
-import Feedback from '../components/blocks/testimonials/Feedback.astro'
-import CaseStudiesHomeSection from '../components/blocks/caseStudies/CaseStudiesHomeSection.astro'
+import Section from '../components/ui/Section.astro'
+import Row from '../components/ui/Row.astro'
+import Col from '../components/ui/Col.astro'
+
 // - UI
+import Feed from '../components/ui/Feeds/ExperienceFeed.astro'
 import List from '../components/ui/List.astro'
+import Slider from '../components/ui/Slider.astro'
+import Testimonial from '../components/ui/Testimonial.astro'
+import Button from '../components/ui/Button.astro'
+import CaseStudyCard from '../components/ui/cards/CaseStudyCard.astro'
+import { Icon } from 'astro-icon/components'
 
 // Content
 // - Data
 import experienceData from '../data/json-files/experienceData.json'
+import testimonialData from '../data/json-files/testimonialData.json'
 
 // - Collection
 import { getCollection } from 'astro:content'
 const allCaseStudies = await getCollection('caseStudies', ({ id }) => {
 	return id
+})
+// Function to sort case studies by date
+const sortedCaseStudies = allCaseStudies.sort((a: any, b: any) => {
+	return new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()
 })
 
 // - SEO
@@ -30,83 +39,196 @@ const SEO = {
 
 // - Hero
 const videoSource = '/videos/hero-video-primary.mp4'
-
-// - About me Data
-const aboutMeData = {
-	title: 'About me',
-	id: 'about',
-	firstColumn: [
-		{
-			text: "I'm a front-end developer with a passion for crafting beautiful, fast, and accessible websites. With a background in design and a love for clean code, I bridge the gap between aesthetics and functionality. I’ve collaborated with startups and agencies to that leave a lasting impression."
-		}
-	],
-	secondColumn: [
-		{
-			text: 'Outside of work, you’ll usually find me sketching interface ideas, playing with new CSS tricks, or exploring design trends on Dribble. I believe in continuous learning and sharing knowledge — whether it’s through side projects, writing, or helping others level up their web skills.'
-		}
-	]
-}
-// - Skills & Tools Data
-const skillsData = {
-	title: 'Skills & Tools',
-	id: 'skills',
-	firstColumn: [
-		{
-			text: 'Over the years, I’ve developed a strong skill set that blends design intuition with technical execution. Whether I’m building from scratch or refining an existing product, I focus on crafting user-centered experiences.',
-			listItems: [
-				{ listItem: 'UI/UX Design' },
-				{ listItem: 'Design Systems' },
-				{ listItem: 'Motion & Microinteractions' },
-				{ listItem: 'Accessibility (WCAG)' },
-				{ listItem: 'Performance Optimization' }
-			]
-		}
-	],
-	secondColumn: [
-		{
-			text: 'I work with a modern stack of tools that help me move fast, stay organized, and deliver high-quality results. From design to deployment, I pick the tools that best suit each project’s needs.',
-			listItems: [
-				{ listItem: 'Figma & FigJam' },
-				{ listItem: 'Framer' },
-				{ listItem: 'Webflow' },
-				{ listItem: 'Astro / React / Tailwind CSS' }
-			]
-		}
-	]
-}
-// - Feedback Data
-import testimonials from '../data/json-files/testimonialData.json'
-const feedbackData = {
-	title: 'Feedback',
-	id: 'feedback'
-}
 ---
 
-<Layout title={SEO.title} description={SEO.description}>
-	<HomeVideoCTA videoSource={videoSource} headingClasses="font-normal" linksClasses="italic" />
-	<TitleText title={aboutMeData.title} id={aboutMeData.id}>
-		<p slot="firstColumn">
-			{aboutMeData.firstColumn[0].text}
-		</p>
-		<p slot="secondColumn">
-			{aboutMeData.secondColumn[0].text}
-		</p>
-	</TitleText>
-	<Experience data={experienceData} hesdingClasses="font-normal" />
-	<TitleText title={skillsData.title} id={skillsData.id}>
-		<div slot="firstColumn">
-			<p>
-				{skillsData.firstColumn[0].text}
-			</p>
-			<List type="basic" listItems={skillsData.firstColumn[0].listItems} classes="ml-4 " />
-		</div>
-		<div slot="secondColumn">
-			<p>
-				{skillsData.secondColumn[0].text}
-			</p>
-			<List type="basic" listItems={skillsData.secondColumn[0].listItems} classes="ml-4 " />
-		</div>
-	</TitleText>
-	<Feedback title={feedbackData.title} id={feedbackData.id} data={testimonials} />
-	<CaseStudiesHomeSection data={allCaseStudies} />
+<Layout title={SEO.title} description={SEO.description} navigation="sticky">
+	<!-- Intro -->
+	<Section id="intro" classes="!overflow-visible !pt-40 lg:!pt-28">
+		<Row>
+			<Col span="2" />
+			<Col span="10" spanMobile="4">
+				<video
+					autoplay
+					muted
+					class="animate absolute -left-40 -top-56 size-80 rounded-full object-cover md:-left-72 md:-top-44 md:size-[31.25rem]"
+				>
+					<source src={videoSource} type="video/mp4" />
+				</video>
+
+				<div class="animate relative z-10">
+					<h1 class="max-w-3xl font-normal">
+						Hi, <br />I’m Milo <br />& I design.
+					</h1>
+
+					<ul class="font-headings flex flex-wrap gap-6 text-lg italic">
+						<li class="animate">
+							<a class="text-inherit" href="mailto:milo@studio.com">milo@studio.com</a>
+						</li>
+						<li class="animate">
+							<a class="text-inherit" href="tel:+13235550198">+1 (323) 555-0198</a>
+						</li>
+						<li class="animate">Remote Friendly</li>
+						<li class="animate"><a class="text-inherit" href="#">@milo.design</a></li>
+					</ul>
+				</div>
+			</Col>
+		</Row>
+	</Section>
+
+	<!-- About -->
+	<Section id="about">
+		<Row>
+			<Col span="2" spanMobile="4">
+				<h2 class="lg:text-right">About me</h2>
+			</Col>
+			<Col span="10" spanMobile="4" classes="lg:columns-2 gap-8">
+				<p>
+					I'm a designer who loves crafting clean, modern, and user-friendly digital experiences. I
+					care deeply about layout, typography, and interaction — and I always aim for that sweet
+					spot between form and function. I've worked with startups and agencies to design websites
+					and products that feel as good as they look.
+				</p>
+				<p>
+					When I’m not designing, I’m usually sketching new ideas, testing fresh design tools, or
+					browsing Dribbble and Behance for inspiration. I believe in thoughtful design, continuous
+					learning, and sharing what I know through side projects and creative collaborations.
+				</p>
+			</Col>
+		</Row>
+	</Section>
+
+	<!-- Experience -->
+	<Section id="experience">
+		<Row>
+			<Col span="2" spanMobile="4">
+				<h2 class="lg:text-right">Experience</h2>
+			</Col>
+			<Col span="10" spanMobile="4">
+				<Feed data={experienceData} />
+			</Col>
+		</Row>
+	</Section>
+
+	<!-- Skills & Tools -->
+	<Section id="skills">
+		<Row>
+			<Col span="2" spanMobile="4">
+				<h2 class="lg:text-right">Skills & Tools</h2>
+			</Col>
+			<Col span="5" spanMobile="4">
+				<p>
+					I'm a designer who loves crafting clean, modern, and user-friendly digital experiences. I
+					care deeply about layout, typography, and interaction — and I always aim for that sweet
+					spot between form and function. I've worked with startups and agencies to design websites
+					and products that feel as good as they look.
+				</p>
+				<List
+					type="basic"
+					listItems={[
+						{ listItem: 'UI/UX Design' },
+						{ listItem: 'Design Systems' },
+						{ listItem: 'Motion & Microinteractions' },
+						{ listItem: 'Accessibility (WCAG)' },
+						{ listItem: 'Performance Optimization' }
+					]}
+					classes="ml-4"
+				/>
+			</Col>
+			<Col span="5" spanMobile="4">
+				<p>
+					When I’m not designing, I’m usually sketching new ideas, testing fresh design tools, or
+					browsing Dribbble and Behance for inspiration. I believe in thoughtful design, continuous
+					learning, and sharing what I know through side projects and creative collaborations.
+				</p>
+				<List
+					type="basic"
+					listItems={[
+						{ listItem: 'Figma & FigJam' },
+						{ listItem: 'Framer' },
+						{ listItem: 'Webflow' },
+						{ listItem: 'Astro / React / Tailwind CSS' }
+					]}
+					classes="ml-4"
+				/>
+			</Col>
+		</Row>
+	</Section>
+
+	<!-- Feedback -->
+	<Section id="feedback">
+		<Row>
+			<Col span="2" spanMobile="4">
+				<h2 class="lg:text-right">Feedback</h2>
+			</Col>
+			<Col span="10" spanMobile="4">
+				<Slider
+					slidesPerView={1}
+					id="feedbackSlider"
+					delay={3500}
+					showNavigation={false}
+					centeredSlides={true}
+					initialSlide={0}
+				>
+					{
+						testimonialData.map((item: any) => (
+							<div class="swiper-slide">
+								<Testimonial
+									blockquote={item.blockquote}
+									figcaption={item.figcaption}
+									cite={item.cite}
+									align="left"
+								/>
+							</div>
+						))
+					}
+				</Slider>
+			</Col>
+		</Row>
+	</Section>
+
+	<!-- Case Studies -->
+	<Section id="case-studies">
+		<Row classes="pb-6">
+			<Col span="2" spanMobile="4">
+				<h2 class="lg:text-right">Case Studies</h2>
+			</Col>
+			<Col span="5" spanMobile="4">
+				<p class="m-0 w-full">
+					From SaaS landing pages to eCommerce stores and interactive web apps. Each one reflects my
+					focus on clean design, thoughtful UX, and modern front-end development.
+				</p>
+			</Col>
+			<Col span="5" spanMobile="4" classes="lg:self-end lg:justify-self-end">
+				<Button
+					link="/case-studies"
+					type="link"
+					variation="link"
+					classes="lg:self-end lg:!justify-end  w-full"
+				>
+					<span class="sr-only">View more case studies</span>
+					more <Icon name="long-arrow-right" />
+				</Button>
+			</Col>
+		</Row>
+		<Row>
+			<Col span="2" />
+			<Col span="10" spanMobile="4">
+				<div class="grid grid-cols-1 gap-4 lg:grid-cols-3">
+					{
+						sortedCaseStudies.slice(0, 3).map((caseStudy: any) => (
+							<CaseStudyCard
+								link={`/case-studies/${caseStudy.id}`}
+								title={caseStudy.data.title}
+								image={caseStudy.data.cardImage}
+								greyImage={caseStudy.data.greyImage}
+								roles={caseStudy.data.roles}
+							>
+								{caseStudy.data.description}
+							</CaseStudyCard>
+						))
+					}
+				</div>
+			</Col>
+		</Row>
+	</Section>
 </Layout>
