--- a/src/pages/index-code.astro
+++ b/src/pages/index-code.astro
@@ -57,7 +57,7 @@ const videoSource = '/videos/hero-video-secondary.mp4'
 
 				<div class="animate relative z-10">
 					<h1 class="max-w-3xl font-normal">
-						Hi, <br />I’m Milo <br />& I design.
+						Hi, <br />I’m Milo <br />& I code.
 					</h1>
 
 					<ul class="font-headings flex flex-wrap gap-6 text-lg italic">
