Added theme switcher functionality

--- a/src/components/ui/NavigationBar.astro
+++ b/src/components/ui/NavigationBar.astro
@@ -69,7 +69,7 @@ function isActivePath(currentPath: string): boolean {
 				}
 			</ul>
 			{/* Theme Switcher */}
-			<!-- <ModeSwitcher /> -->
+			<ModeSwitcher />
 		</nav>
 	</div>
 </header>
