--- a/src/layouts/LayoutDesign.astro
+++ b/src/layouts/LayoutDesign.astro
@@ -41,9 +41,14 @@ const { title, description, ogImage, noindex, navigation = 'sticky', classes } =
 ---
 
 <!doctype html>
-<html lang="en" class={`scroll-animation mode-light ${classes}`}>
+<html lang="en" class={`scroll-animation mode-auto ${classes}`}>
 	<Header title={title} description={description} ogImage={ogImage} noindex={noindex} />
-	<body class:list={[`mode-light`, configData.scrollAnimations ? 'scroll-animation' : '']}>
+	<body
+		class:list={[
+			{ ['mode-' + `${configData.mode}`]: configData.mode },
+			{ ['scroll-animation']: configData.scrollAnimations }
+		]}
+	>
 		<GoogleTagManager />
 		{navigation !== 'none' && <NavigationBar type={navigation} />}
 		<Main>
