--- a/src/pages/index-code.astro
+++ b/src/pages/index-code.astro
@@ -41,7 +41,7 @@ const SEO = {
 const videoSource = '/videos/hero-video-secondary.mp4'
 ---
 
-<Layout title={SEO.title} description={SEO.description} navigation="sticky">
+<Layout title={SEO.title} description={SEO.description}>
 	<!-- Intro -->
 	<Section id="intro" classes="!overflow-visible !pt-40 lg:!pt-28">
 		<Row>
