--- a/src/pages/index-code.astro
+++ b/src/pages/index-code.astro
@@ -56,11 +56,11 @@ const videoSource = '/videos/hero-video-secondary.mp4'
 				</video>
 
 				<div class="animate relative z-10">
-					<h1 class="max-w-3xl font-normal">
+					<h1 class="max-w-3xl">
 						Hi, <br />I’m Milo <br />& I code.
 					</h1>
 
-					<ul class="font-headings flex flex-wrap gap-6 text-lg italic">
+					<ul class="font-headings flex flex-wrap gap-6 text-lg font-medium">
 						<li class="animate">
 							<a class="text-inherit" href="mailto:milo@studio.com">milo@studio.com</a>
 						</li>
