--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -177,6 +177,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 									figcaption={item.figcaption}
 									cite={item.cite}
 									align="left"
+									quoteClasses="font-headings italic"
 								/>
 							</div>
 						))
