--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -29,14 +29,14 @@ const { data, classes } = Astro.props
 <ul aria-label="Exp feed" class:list={['feed', { [`${classes}`]: classes }]}>
 	{
 		data.map((item) => (
-			<li class="feed__item animate">
+			<li class="feed__item animate [.mode-dark_&]:after:!border-neutral-800">
 				<div class="feed__item-date_info">
 					<h4 class="mb-2">{item.date}</h4>
 					<span class="feed__item-date_info-company">{item.company}</span>
 					<span class="feed__item-date_info-location">{item.location}</span>
 				</div>
-				<div class="feed__item-container">
-					<h3 class="feed__item-header">
+				<div class="feed__item-container [.mode-dark_&]:before:!bg-secondary-500 [.mode-dark_&]:before:!ring-neutral-800 [.mode-dark_&]:after:!bg-secondary-500">
+					<h3 class="feed__item-header [.mode-dark_&]:!text-white">
 						{item.title}
 						<span> - {item.date}</span>
 					</h3>
