--- a/src/components/ui/cards/CaseStudyCard.astro
+++ b/src/components/ui/cards/CaseStudyCard.astro
@@ -60,9 +60,13 @@ const formatRoleName = (role: string): string => {
 			</a>
 		)
 	}
-	<CardBody classes="!px-0 !pb-4 text-neutral-600 dark:text-neutral-400 text-base">
+	<CardBody
+		classes="!px-0 !pb-4 text-neutral-600 dark:text-neutral-400 [.mode-dark_&]:text-neutral-400 text-base"
+	>
 		<h3 class="caseStudy-title">
-			<a href={link}>{title}</a>
+			<a href={link} class="[.mode-dark_&]:!text-white [.mode-dark_&]:hover:!text-secondary-500"
+				>{title}</a
+			>
 		</h3>
 		<slot />
 	</CardBody>
@@ -88,6 +92,7 @@ const formatRoleName = (role: string): string => {
 	.caseStudy-title {
 		@apply mb-4 text-lg text-neutral-900 transition-colors duration-300 hover:text-primary-500 dark:text-white dark:hover:text-secondary-500 [&_a]:text-inherit;
 	}
+
 	.caseStudy-roles {
 		@apply flex w-full flex-wrap gap-2 text-sm italic text-neutral-400 dark:text-neutral-500 [&_caseStudy-role]:block;
 	}
