--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -19,18 +19,18 @@ import { Icon } from 'astro-icon/components'
 					Got a project in mind, a question, or just want to say hello? I’m always open to new
 					collaborations and interesting ideas. Feel free to reach out — I’d love to hear from you.
 				</p>
-				<div class="footer__links font-headings [.mode-dark_&]:!text-neutral-300">
+				<div class="footer__links font-headings">
 					<a href="
-					mailto:milo@studio.com" class="footer__link">
+					mailto:milo@studio.com" class="footer__link [.mode-dark_&]:!text-neutral-300">
 						<Icon name="at-sign" /> milo@studio.com
 					</a>
-					<a href="tel:+13235550198" class="footer__link">
+					<a href="tel:+13235550198" class="footer__link [.mode-dark_&]:!text-neutral-300">
 						<Icon name="phone" /> +1 (323) 555-0198
 					</a>
-					<span class="footer__link">
+					<span class="footer__link [.mode-dark_&]:!text-neutral-300">
 						<Icon name="check-circle" /> Remote Friendly
 					</span>
-					<a href="#" class="footer__link">
+					<a href="#" class="footer__link [.mode-dark_&]:!text-neutral-300">
 						<Icon name="dribbble" /> @milo.design
 					</a>
 				</div>
