--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,7 +101,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 	<Section id="experience" classes="!overflow-visible">
 		<Row>
 			<Col span="2" spanMobile="4" classes="h-full">
-				<h2 class="sticky top-4 lg:text-right">Experience</h2>
+				<h2 class="lg:sticky lg:top-4 lg:text-right">Experience</h2>
 			</Col>
 			<Col span="10" spanMobile="4">
 				<Feed data={experienceData} />
