--- a/src/pages/index-image.astro
+++ b/src/pages/index-image.astro
@@ -100,10 +100,10 @@ const imageSource = '/hero/hero-image-primary.png'
 	</Section>
 
 	<!-- Experience -->
-	<Section id="experience">
+	<Section id="experience" classes="!overflow-visible">
 		<Row>
-			<Col span="2" spanMobile="4">
-				<h2 class="lg:text-right">Experience</h2>
+			<Col span="2" spanMobile="4" classes="h-full">
+				<h2 class="sticky top-4 lg:text-right">Experience</h2>
 			</Col>
 			<Col span="10" spanMobile="4">
 				<Feed data={experienceData} />
