--- a/src/components/ui/NavigationBar.astro
+++ b/src/components/ui/NavigationBar.astro
@@ -51,6 +51,7 @@ function isActivePath(currentPath: string): boolean {
 					<span aria-hidden="true"></span>
 					<span aria-hidden="true"></span>
 				</div>
+				<span class="header__toggle-backdrop"> </span>
 			</button>
 			{/* Navigation links */}
 			<div class="header__menu">
@@ -130,13 +131,13 @@ function isActivePath(currentPath: string): boolean {
 		@apply flex h-[5.5rem] items-stretch justify-end gap-6 font-medium text-neutral-700 dark:text-neutral-50;
 	}
 	.header__menu {
-		@apply invisible absolute left-0 top-0 z-[-1] ml-auto h-dvh w-full justify-center overflow-hidden overflow-y-auto overscroll-contain bg-white/90 pt-24 font-medium opacity-0 transition-[opacity,visibility] duration-300 dark:bg-neutral-950/90 [&_ul]:pb-12 [&_ul]:lg:pb-24;
+		@apply invisible fixed left-0 top-0 ml-auto h-dvh w-dvw justify-center overflow-hidden overscroll-contain pt-24 font-medium opacity-0 transition-[opacity,visibility] duration-300 [&_ul]:pb-12 [&_ul]:lg:pb-24;
 	}
 	.header__menu--open {
-		@apply visible opacity-100 backdrop-blur-sm [&_.header\_\_menu-link]:animate-fadeIn;
+		@apply visible opacity-100 [&_.header\_\_menu-link]:animate-fadeIn;
 	}
 	.header__menu--open .header__menu-link {
-		animation-delay: calc(0.1s + var(--index) * 0.05s);
+		animation-delay: calc(0.5s + var(--index) * 0.05s);
 	}
 	.header__menu-item {
 		@apply relative flex cursor-pointer flex-col items-stretch;
@@ -145,7 +146,13 @@ function isActivePath(currentPath: string): boolean {
 		@apply relative flex translate-y-[0.625rem] items-center justify-center gap-1 py-4 text-center text-4xl opacity-0 transition-colors duration-300 hover:text-primary-500 focus:text-primary-600 focus:outline-none focus-visible:outline-none lg:leading-[60px] dark:hover:text-secondary-500 dark:focus:text-secondary-600 [&.active]:text-primary-500 dark:[&.active]:text-secondary-500;
 	}
 	.header__toggle {
-		@apply relative order-10 block h-10 w-10 self-center [&--open]:visible [&--open]:opacity-100;
+		@apply relative order-10 block h-16 w-16 origin-center self-center;
+	}
+	.header__toggle-backdrop {
+		@apply fixed right-6 top-3 z-[-1] size-16 rounded-full bg-white/80 object-center backdrop-blur-sm transition-all duration-700 dark:bg-neutral-950/90 [.header\_\_toggle--open_&]:scale-[150] [.mode-dark_&]:bg-neutral-950/90 [.mode-light_&]:bg-white/90;
+	}
+	.header__toggle--open {
+		@apply after:scale-[100];
 	}
 	.header__toggle-inner {
 		@apply absolute left-1/2 top-1/2 w-6 -translate-x-1/2 -translate-y-1/2 transform;
